# drawing_with_llm

./: .gitignore  Makefile  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: create_training_data.ipynb  fine_tuning.ipynb
