[project]
name = "drawing-with-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "yuki.ito",email = "yuki.ito@abejainc.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "transformers (==4.47.1)",
    "peft (>=0.15.2,<0.16.0)",
    "trl (>=0.17.0,<0.18.0)",
    "bitsandbytes (>=0.45.5,<0.46.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "autoawq (==0.2.7.post3)",
    "datasets (>=3.5.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false